# lattice-biased-nonce-ecdsa

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: paper-reproduction-notes.md
scripts/: attack_hnp_lattice.py  check_biased_signatures.py  check_nonce_bias.py  check_paper_derived_quantities.py  generate_biased_signatures.py  generate_partial_known.py
src/lattice_attack/: constants.py  ecdsa_generator.py  hnp.py
