[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-biased-nonce-ecdsa"
version = "0.1"
description = "Reproduction of Biased Nonce Sense (Breitner & Heninger 2019) – biased ECDSA signature generator"
authors = [{name = "Group K"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sage",
]
