[metadata]
name = lattice-biased-nonce-ecdsa
version = 0.1
author = Group K
description = Reproduction of Biased Nonce Sense (Breitner & Heninger 2019)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
